--- a/compose.yml
+++ b/compose.yml
@@ -4,13 +4,13 @@ services:
   chain-grabber:
     container_name: chain-grabber
     env_file: ${ENV_FILE}
-    build: 
-      context: .
-      dockerfile: Dockerfile
+    image: openjdk
     working_dir: /app
+    volumes:
+      - ./volumes/chain-grabber.conf:/app/chain-grabber.conf
+      - ./volumes/chain-grabber.jar:/app/chain-grabber.jar
     networks:
-      - ergopad-node_net
-      - ergopad-data_net
+      - ergopad-net
     deploy:
       restart_policy:
         condition: on-failure
@@ -27,15 +27,15 @@ services:
   explorer-api:
     container_name: explorer-api
     env_file: ${ENV_FILE}
-    build: 
-      context: .
-      dockerfile: Dockerfile
+    image: openjdk
     ports:
       - ${EXPLORER_PORT}:8080
     working_dir: /app
+    volumes:
+      - ./volumes/explorer-api.conf:/app/explorer-api.conf
+      - ./volumes/explorer-api.jar:/app/explorer-api.jar
     networks:
-      - ergopad-node_net
-      - ergopad-data_net
+      - ergopad-net
     deploy:
       restart_policy:
         condition: on-failure
@@ -52,15 +52,15 @@ services:
   utx-tracker:
     container_name: utx-tracker
     env_file: ${ENV_FILE}
-    image: openjdk:8-jre-slim
-    volumes:
-      - ./app:/app
+    image: openjdk
     working_dir: /app
+    volumes:
+      - ./volumes/utx-tracker.conf:/app/utx-tracker.conf
+      - ./volumes/utx-tracker.jar:/app/utx-tracker.jar
+    networks:
+      - ergopad-net
     profiles:
       - disabled
-    networks:
-      - ergopad-node_net
-      - ergopad-data_net
     deploy:
       restart_policy:
         condition: on-failure
@@ -77,15 +77,15 @@ services:
   utx-broadcaster:
     container_name: utx-broadcaster
     env_file: ${ENV_FILE}
-    image: openjdk:8-jre-slim
-    volumes:
-      - ./app:/app
+    image: openjdk
     working_dir: /app
+    volumes:
+      - ./volumes/utx-broadcaster.conf:/app/utx-broadcaster.conf
+      - ./volumes/utx-broadcaster.jar:/app/utx-broadcaster.jar
+    networks:
+      - ergopad-net
     profiles:
       - disabled
-    networks:
-      - ergopad-node_net
-      - ergopad-data_net
     deploy:
       restart_policy:
         condition: on-failure
@@ -100,7 +100,5 @@ services:
     command: java -Dconfig.file=utx-broadcaster.conf -jar utx-broadcaster.jar  
 
 networks:
-  ergopad-node_net:
-    external: true
-  ergopad-data_net:
+  ergopad-net:
     external: true
